--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,21 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+YOUTUBE_IMAGE_HEADER = "http://img.youtube.com/vi/"
+YOUTUBE_IMAGE_FOOTER = "/0.jpg"
+YOUTUBE_URL =  "https://youtu.be/"
 
-API_KEY = "Enter API KEY HERE"
+API_KEY = "ENTER TMDb API here"
+
 IMAGE_PATH = "http://image.tmdb.org/t/p/w342/"
 BASE_URL = "https://api.themoviedb.org/3"
+
+CONTENT_AUTHORITY = "com.example.ayush.project1.movies.provider"
+
+KEY_TABLE_MOVIES = "movies"
+KEY_ID = "id"
+KEY_TITLE = "title"
+KEY_POSTER = "poster"
+KEY_OVERVIEW = "overview"
+KEY_RATING = "rating"
+KEY_RELEASE_DATE = "release_date"
