--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:tools="http://schemas.android.com/tools"
-          package="com.example.ayush.project1"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.ayush.project1">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        android:theme="@style/AppTheme.NoActionBar">
 
-        <activity android:name=".AllMovies.MainActivity"
-                  tools:ignore="InnerclassSeparator">
+        <activity android:name=".MovieGrid.MovieGridActivity"
+            tools:ignore="InnerclassSeparator">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".MovieDetails.Main2Activity"
-            android:parentActivityName=".AllMovies.MainActivity"
+            android:name=".MovieDetails.AllDetails.MovieDetailsActivity"
             android:label="@string/about"
-            tools:ignore="InnerclassSeparator">
-
-        </activity>
+            android:parentActivityName=".MovieGrid.MovieGridActivity" />
         <activity
-            android:name=".SettingsActivity"
-            android:parentActivityName=".AllMovies.MainActivity"
-            android:label="@string/settings">
-        </activity>
+            android:name=".Utilities.SettingsActivity"
+            android:label="@string/settings"
+            android:parentActivityName=".MovieGrid.MovieGridActivity" />
+
+        <provider
+            android:name=".Utilities.MoviesProvider"
+            android:authorities="com.example.ayush.project1.movies.provider"
+            android:exported="false"
+            android:syncable="true" />
+
     </application>
 
 </manifest>
