--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        android:allowBackup="false"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name=".MovieGrid.MovieGridActivity"
             tools:ignore="InnerclassSeparator">
@@ -20,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MovieDetails.AllDetails.MovieDetailsActivity"
             android:label="@string/about"
@@ -36,5 +38,4 @@
             android:syncable="true" />
 
     </application>
-
 </manifest>
