--- a/gradle.properties
+++ b/gradle.properties
@@ -1,27 +1,8 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx10248m -XX:MaxPermSize=256m
-# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-
 YOUTUBE_IMAGE_HEADER = "http://img.youtube.com/vi/"
 YOUTUBE_IMAGE_FOOTER = "/0.jpg"
 YOUTUBE_URL =  "https://youtu.be/"
 
-API_KEY = "ENTER TMDb API here"
+API_KEY = "Refer https://www.themoviedb.org/ for obtaining api key"
 
 IMAGE_PATH = "http://image.tmdb.org/t/p/w342/"
 BASE_URL = "https://api.themoviedb.org/3"
